@@ -1,3 +1,8 @@
+2000-10-26  Lars Wirzenius  <liw@iki.fi>
+
+	* gwlib/octstr.c: Give unsigned int as the type to expect to
+	va_arg when converting %u and %hu and similar cases.
+
 2000-10-26  Richard Braakman  <dark@wapit.com>
 
 	* gw/wap-appl.c: Use http_header_combine instead of
